--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <div class="container grid ">
                 <aside class="plan-details">
                     Prices include all applicable taxes. You can cancel at any time. Both plans include the
-                        following:
+                    following:
                 </aside>
             </div>
             <div class="container grid grid--4-cols">
@@ -364,7 +364,43 @@
                 </div>
             </div>
         </section>
+        <section class="section-cta">
+            <div class="container">
+                <div class="cta">
+                    <div class="cta-text-box">
+                        <h2 class="heading-secondary">Get your first meal for free!</h2>
+                        <p class="cta-text">
+                            Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can
+                            cancel or
+                            pause anytime. And the first meal is on us!
+                        </p> 
+                        <form class="cta-form" action="#">
+                            <div>
+                                <label for="full-name">Full Name</label>
+                                <input id="full-name" type="text" placeholder="Keshav Dokania" required>
+                            </div>
 
+                            <div>
+                                <label for="email">Email address</label>
+                                <input id="email" type="email"  placeholder="me@example.com" required>
+                            </div>
+                            <div>
+                                <label for="select-where">Where did you hear from us?</label>
+                                <select id="select-where" required>
+                                    <option value>Please choose one option:</option>
+                                    <option value="Friends">Friends and family</option>
+                                    <option value="Youtube">Youtube videos</option>
+                                    <option value="Podcast">Podcast</option>
+                                    <option value="Facebook">Facebook ad</option>
+                                    <option value="others">others</option>
+                                </select>
+                            </div>
+                            <button class="btn btn--form">Sign Up now</button>
+                        </form>
+                    </div>
+                    <div class="cta-img-box" role="img" aria-label="woman enjoying food"> </div>
+                </div>
+        </section>
     </main>
 
 </body>
