--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                             Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can
                             cancel or
                             pause anytime. And the first meal is on us!
-                        </p> 
+                        </p>
                         <form class="cta-form" action="#">
                             <div>
                                 <label for="full-name">Full Name</label>
@@ -382,7 +382,7 @@
 
                             <div>
                                 <label for="email">Email address</label>
-                                <input id="email" type="email"  placeholder="me@example.com" required>
+                                <input id="email" type="email" placeholder="me@example.com" required>
                             </div>
                             <div>
                                 <label for="select-where">Where did you hear from us?</label>
@@ -402,7 +402,72 @@
                 </div>
         </section>
     </main>
-
+    <footer class="footer">
+        <div class="container grid grid--footer">
+            <div class="logo-col">
+                <a href="#" class="footer-logo">
+                    <img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo">
+                </a>
+                <ul class="social-links">
+                    <li>
+                        <a class="footer-link" href="#">
+                            <ion-icon class="social-icon" name="logo-instagram"></ion-icon>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer-link" href="#">
+                            <ion-icon class="social-icon" name="logo-facebook"></ion-icon>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer-link" href="#">
+                            <ion-icon class="social-icon" name="logo-twitter"></ion-icon>
+                        </a>
+                    </li>
+                </ul>
+                <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved</p>
+            </div>
+            <div class="address-col">
+                <p class="footer-heading">Contact us</p>
+                <address class="contacts">
+                    <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+                    <p>
+                        <a class="footer-link" href="tel:415-201-6370">415-201-6370</a>
+                        <br>
+                        <a class="footer-link" href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+                    </p>
+                </address>
+            </div>
+            <div class="nav-col">
+                <p class="footer-heading">Accounts</p>
+                <ul class="footer-nav">
+                    <li><a class="footer-link" href="#">Create account</a> </li>
+                    <li><a class="footer-link" href="#">Sign in</a> </li>
+                    <li><a class="footer-link" href="#">iOS app</a> </li>
+                    <li><a class="footer-link" href="#">Android app</a> </li>
+                </ul>
+            </div>
+            <div class="nav-col">
+                <p class="footer-heading">Company</p>
+                <ul class="footer-nav">
+                    <li><a class="footer-link" href="#">About Omnifood</a> </li>
+                    <li><a class="footer-link" href="#">For Business</a> </li>
+                    <li><a class="footer-link" href="#">Sign in</a> </li>
+                    <li><a class="footer-link" href="#">Cooking partners</a> </li>
+                   
+                </ul>
+            </div>
+            <div class="nav-col">
+                <p class="footer-heading">Resources</p>
+                <ul class="footer-nav">
+                    <li><a class="footer-link" href="#">Recipe directory</a> </li>
+                    <li><a class="footer-link" href="#">Help center</a> </li>
+                    <li><a class="footer-link" href="#">Privacy & terms</a> </li>
+                   
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
