--- a/index.html
+++ b/index.html
@@ -3,29 +3,52 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description"
+      content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs." />
+  
+    <!-- Always include this line of code!!! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OmniFood</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300..900&display=swap" rel="stylesheet" />
+  
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  
+    <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/general.css">
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <link rel="stylesheet" href="css/queries.css" />
+  
+    <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
+  
+    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
+    <script defer src="js/script.js"></script>
+  
+    <title>Omnifood &mdash; Never cook again!</title>
+  </head>
 </head>
 
 <body>
-    <header class="header">
-        <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
+    <header class="header nav-open">
+        <a href="#">
+            <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
+        </a>
         <nav class="main-nav">
             <ul class="main-nav-list">
-                <li><a class="main-nav-link" href="#"> How it works</a></li>
-                <li><a class="main-nav-link" href="#">Meals</a></li>
-                <li><a class="main-nav-link" href="#">Testimonials</a></li>
-                <li><a class="main-nav-link" href="#">Pricing</a></li>
-                <li><a class="main-nav-link nav--cta" href="#">Try for Free</a></li>
+                <li><a class="main-nav-link" href="#how"> How it works</a></li>
+                <li><a class="main-nav-link" href="#meals">Meals</a></li>
+                <li><a class="main-nav-link" href="#testimonials">Testimonials</a></li>
+                <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+                <li><a class="main-nav-link nav--cta" href="#cta">Try for Free</a></li>
             </ul>
         </nav>
+
+        <button class="btn-mobile-nav ">
+            <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+            <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+        </button>
     </header>
     <main>
         <section class="section-hero">
@@ -39,8 +62,8 @@
                         eat healthy again. Tailored to your personal tastes and
                         nutritional needs.
                     </p>
-                    <a href="#" class="btn btn--full margin-right-sm">Start eating Well</a>
-                    <a href="#" class="btn btn--outline">Learn more &darr;</a>
+                    <a href="#cta" class="btn btn--full margin-right-sm">Start eating Well</a>
+                    <a href="#how" class="btn btn--outline">Learn more &darr;</a>
                     <div class="delivered-meals">
                         <div class="delivered-imgs">
                             <img src="img/customers/customer-1.jpg" alt="Customer Photo" />
@@ -55,7 +78,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="hero-img">
+                <div class="hero-img-box">
                     <img src="img/hero.png" class="hero-img"
                         alt="Woman enjoying food, meals is storgae container, and a food bowl on a table" />
                 </div>
@@ -75,7 +98,7 @@
             </div>
         </section>
 
-        <section class="section-how">
+        <section class="section-how" id="how">
             <div class="container">
                 <span class="subheading">HOW IT WORKS</span>
                 <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
@@ -120,7 +143,7 @@
         </section>
 
 
-        <section class="section-meals">
+        <section class="section-meals" id="meals">
             <div class="container center-text">
                 <span class="subheading">MEALS</span>
                 <h2 class="heading-secondary">Omnifood AI chooses from 5,000+ recipes</h2>
@@ -190,7 +213,7 @@
             </div>
         </section>
 
-        <section class="section-testimonials">
+        <section class="section-testimonials" id="testimonials">
 
             <div class="testimonials-container">
                 <span class="subheading">Testimonials</span>
@@ -271,7 +294,7 @@
 
             </div>
         </section>
-        <section class="section-pricing">
+        <section class="section-pricing" id="pricing">
             <div class="container">
                 <span class="subheading">Pricing</span>
                 <h2 class="heading-secondary">Eating well without breaking the bank</h2>
@@ -364,7 +387,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-cta">
+        <section class="section-cta" id="cta">
             <div class="container">
                 <div class="cta">
                     <div class="cta-text-box">
@@ -374,19 +397,19 @@
                             cancel or
                             pause anytime. And the first meal is on us!
                         </p>
-                        <form class="cta-form" action="#">
+                        <form class="cta-form" name="sign-up" netlify>
                             <div>
                                 <label for="full-name">Full Name</label>
-                                <input id="full-name" type="text" placeholder="Keshav Dokania" required>
+                                <input id="full-name" type="text" placeholder="Keshav Dokania" name="full-name" required>
                             </div>
 
                             <div>
                                 <label for="email">Email address</label>
-                                <input id="email" type="email" placeholder="me@example.com" required>
+                                <input id="email" type="email" placeholder="me@example.com" name="email" required>
                             </div>
                             <div>
                                 <label for="select-where">Where did you hear from us?</label>
-                                <select id="select-where" required>
+                                <select id="select-where" name="select-where" required>
                                     <option value>Please choose one option:</option>
                                     <option value="Friends">Friends and family</option>
                                     <option value="Youtube">Youtube videos</option>
@@ -425,7 +448,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved</p>
+                <p class="copyright">Copyright &copy; <span class="year"> 2027 </span> by Omnifood, Inc. All rights reserved</p>
             </div>
             <div class="address-col">
                 <p class="footer-heading">Contact us</p>
