--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@
             <div class="address-col">
                 <p class="footer-heading">Contact us</p>
                 <address class="contacts">
-                    <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+                    <p class="address">Marathahalli, Bangalore, Karnataka, India 560037</p>
                     <p>
-                        <a class="footer-link" href="tel:415-201-6370">415-201-6370</a>
+                        <a class="footer-link" href="tel:+91-77629-32426">+91-77629-32426</a>
                         <br>
-                        <a class="footer-link" href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+                        <a class="footer-link" href="mailto:keshavdokania@yahoo.com">hello@omnifood.com</a>
                     </p>
                 </address>
             </div>
